# EmailPilot

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/emailpilot/: __init__.py  config.py  core.py  utils.py
tests/: test_core.py
